Add feature: PDU release
