# backend/controllers/handler/DeviceInfoHandler.js
@@ -26,6 +26,14 @@ module.exports.establishPduSession = (selected_session) => {
     return requestManager.makeARequestWithBodyData('POST', `${process.env.PHYSICAL_UE_PROXY_ADDRESS}/pdu-session`, selected_session, data => data)
 }
 
+/**
+ * @returns a promise resolved with a state of the PDU session deletion process or rejected with an error
+ */
+ module.exports.releasePduSession = (pdu_id) => {
+  logger.info("Requesting PDU Session deletion");
+  return requestManager.makeARequestWithBodyData('DELETE', `${process.env.PHYSICAL_UE_PROXY_ADDRESS}/pdu-session`, pdu_id, data => data)
+}
+
 module.exports.getPduSessions = () => {
     logger.info("Obtaining established PDU Sessions");
     return requestManager.makeARequest('GET', `${process.env.PHYSICAL_UE_PROXY_ADDRESS}/pdu-session`, data => data)
