# physical_ue_proxy/server/controllers/default_controller.py
@@ -1,6 +1,7 @@
 import connexion
 
 from server.models.selected_session import SelectedSession  # noqa: E501
+from server.models.selected_pdu import SelectedPDU  # noqa: E501  # noqa: E501
 from server.models.supi import Supi  # noqa: E501
 from server.models.gnb_connection_state import GnbConnectionState  # noqa: E501
 from server.controllers.config import *
@@ -20,6 +21,12 @@ def create_pdu_session(body):  # noqa: E501
   if connexion.request.is_json:
     body = SelectedSession.from_dict(connexion.request.get_json())  # noqa: E501
     return cli_command_handler.establish_pdu_session(body.sst, body.sd, body.dnn, body.pdu_session_type)
+
+
+def release_pdu_session(body)
+  if connexion.request.is_json:
+    body = SelectedPDU.from_dict(connexion.request.get_json())  # noqa: E501
+    return cli_command_handler.release_pdu_session(body.pdu_id)
 
 
 def get_device_imsi():  # noqa: E501
